--- a/src/index.css
+++ b/src/index.css
@@ -12,14 +12,10 @@ html {
 
 body {
   box-sizing: border-box;
+  font-family: "Open Sans", sans-serif;
+  color: #000;
 
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  color: #fff;
+  min-width: 350px;
 }
-
 
 /* Global animations */
