--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,9 @@ body {
   color: #000;
 
   min-width: 350px;
-}
 
-/* Global animations */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow-x: hidden;
+}
